testdata/invalid/invalid_const_unassignable_float.bop
const float32 g = "baz";